--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
     <header class="page-header">
       <div class="page-body__container  page-header__container">
         <img class="page-header__logo" src="img/logo.png" width="42" height="42" alt="Trip logo">
-
       </div>
     </header>
     <main class="page-body__page-main  page-main">
       <div class="page-body__container">
 
       </div>
+      <div id="spinner"></div>
     </main>
     <script src="./bundle.js"></script>
   </body>
